[tool.poetry]
name = "sagemaker-playground"
version = "0.1.0"
description = ""
authors = ["iiwo <iiwo@o2.pl>"]
readme = "README.md"
#packages = [{include = "sagemaker_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
sagemaker = "^2.183.0"
boto3 = "^1.28.41"
jupyterlab = "^4.0.5"
ipykernel = "^6.25.0"
transformers = "4.28.0"
torch="^2.0.1"
sentencepiece="^0.1.99"
langchain = "0.0.271"
duckduckgo-search= "3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
